Fixed some errors between the files
Fixed some errors between the files

--- a/src/aurelia-mongodb-stitch-authentication/src/elements/auth-service.html
+++ b/src/aurelia-mongodb-stitch-authentication/src/elements/auth-service.html
@@ -18,9 +18,9 @@
 	    	<input type="password" placeholder="password" value.bind="authPassword">
 	    </form>
 	    <hr>
-	    <button click.tigger="show(appid)">Show appid</button>
-	    <button click.tigger="show(email)">Show email</button>
-	    <button click.tigger="show(password)">Show password</button>
+	    <button click.trigger="show(appid)">Show appid</button>
+	    <button click.trigger="show(email)">Show email</button>
+	    <button click.trigger="show(password)">Show password</button>
 	  </body>
 	</html>
 </template>
