--- a/src/aurelia-mongodb-stitch-authentication/src/elements/auth-service.html
+++ b/src/aurelia-mongodb-stitch-authentication/src/elements/auth-service.html
@@ -17,6 +17,8 @@
 	    	<input type="text" placeholder="e-mail" value.bind="authEmail">
 	    	<input type="password" placeholder="password" value.bind="authPassword">
 	    </form>
+	    <div class="placeholder"></div>
+	    <button click.trigger="login()">Login</button>
 	    <hr>
 	    <button click.trigger="show(appid)">Show appid</button>
 	    <button click.trigger="show(email)">Show email</button>
