Added Debug Section
Added Debug Section, will be disabled later

--- a/src/aurelia-mongodb-stitch-authentication/src/elements/auth-service.html
+++ b/src/aurelia-mongodb-stitch-authentication/src/elements/auth-service.html
@@ -20,9 +20,12 @@
 	    <div class="placeholder"></div>
 	    <button click.trigger="login()">Login</button>
 	    <hr>
-	    <button click.trigger="show(appid)">Show appid</button>
-	    <button click.trigger="show(email)">Show email</button>
-	    <button click.trigger="show(password)">Show password</button>
-	  </body>
+	    <p class="secondPageTitle">Debug section</p>
+	    <button click.trigger="show('appid')">Show appid</button>
+	    <button click.trigger="show('email')">Show email</button>
+	    <button click.trigger="show('password')">Show password</button>
+	    <button click.trigger="show('authstate')">Show authstate</button>
+	    <hr>
+	</body>
 	</html>
 </template>
