--- a/src/aurelia-mongodb-stitch-authentication/dev-app/general.html
+++ b/src/aurelia-mongodb-stitch-authentication/dev-app/general.html
@@ -19,7 +19,7 @@
 			<p class="secondPageTitle">Files</p>
 			<p class="text">A short explanation of which files are used for what:</p>
 			<p class="text" style="font-weight: bold;">Login Files (login.html, login.ts):</p>
-			<p class="text">In this example, the login file are the main files used to use the plugin. Especially the 'login.ts' file.
+			<p class="text">In this example, the login files are the main files used to use the plugin. Especially the 'login.ts' file.
 			It uses injected functions form the 'auth-service.ts' file which is the main file of the plugin itself.</p>
 			<p class="text" style="font-weight: bold">appID (appID.json)</p>
 			<p class="text">The 'appID.json' file is used to set the 'applicationID' for MongoDB Stitch. If this ID is not set,
