Added a debug section and fixed a bug in app.ts

--- a/src/aurelia-mongodb-stitch-authentication/dev-app/login.html
+++ b/src/aurelia-mongodb-stitch-authentication/dev-app/login.html
@@ -19,6 +19,10 @@
 			<button click.trigger="isAuthenticated()">Auth?</button>
 			<div class="placeholder"></div>
 			<hr>
+			<div class="placeholder"></div>
+			<div class="debugSection">
+				<p class="text" id="consoleOutput">${consoleOutput}</p>
+			</div>
 	  </body>
 	</html>
 </template>
