Added p tag for consoleOutput (not working yet)

--- a/src/aurelia-mongodb-stitch-authentication/dev-app/login.html
+++ b/src/aurelia-mongodb-stitch-authentication/dev-app/login.html
@@ -20,9 +20,9 @@
 			<div class="placeholder"></div>
 			<hr>
 			<div class="placeholder"></div>
-			<div class="debugSection">
+			<!-- <div class="debugSection">
 				<p class="text" id="consoleOutput">${consoleOutput}</p>
-			</div>
+			</div> -->
 	  </body>
 	</html>
 </template>
