Added some instruction text

--- a/src/aurelia-mongodb-stitch-authentication/dev-app/login.html
+++ b/src/aurelia-mongodb-stitch-authentication/dev-app/login.html
@@ -7,7 +7,10 @@
 	  </head>
 	  <body>
 			<p class="pageTitle">Login to MongoDB Stitch</p>
-			<p class="text">This plugin allows you to quickly connect to your mongoDB Stitch application.</p
+			<p class="text">Before you enter the email / password informations in the following form, please make sure that you
+				have changed the app ID in the appID.json file.</p><br>
+				<p class="text">You can find the app ID online on <a href="https://stitch.mongodb.com" target="_blank">stitch.mongodb.com</a> ->
+					Stitch -> Your Application. Now you can copy the app ID in the top left corner.</p>
 			<p class="text">Enter the required email / password login informations down below.</p>
 			<form>
 				<input type="text" placeholder="email" value.bind="authEmail">
