Added debug section

--- a/src/aurelia-mongodb-stitch-authentication/dev-app/login.html
+++ b/src/aurelia-mongodb-stitch-authentication/dev-app/login.html
@@ -23,9 +23,10 @@
 			<div class="placeholder"></div>
 			<hr>
 			<div class="placeholder"></div>
-			<!-- <div class="debugSection">
-				<p class="text" id="consoleOutput">${consoleOutput}</p>
-			</div> -->
+			<div class="debugSection">
+				<p class="text" id="consoleOutput">${consoleOutput0}</p>
+				<p class="text" id="consoleOutput">${consoleError}</p>
+			</div>
 	  </body>
 	</html>
 </template>
